--- a/index.html
+++ b/index.html
@@ -22,18 +22,19 @@
       <h1>
 <a id="blastpad" class="anchor" href="#blastpad" aria-hidden="true"><span class="octicon octicon-link"></span></a>BlastPad</h1>
 
-<p>A vibrant new launch page for your startup.</p>
+<p>Create a launch website for your startup with a blast!  </p>
 
 <h1>
 <a id="what-is-blastpad" class="anchor" href="#what-is-blastpad" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is BlastPad?</h1>
 
-<p>BlastPad is a simple landing page for your website or beta site.  Users can sign up for your launch.<br>
-It is written in JavaScript, PHP and mySQL.</p>
+<p>Get users for your startup quickly by creating a launch site with BlastPad.  BlastPad works beautifully out of the box with a jumbo headline, a call to action and a simple sign up form so users can sign up for your beta.  After signing up, users can share your website on Facebook, Twitter and other social media sites.  Websites created with BlastPad are always responsive, mobile-friendly and SEO-ready.  BlastPad is open-source so you can set it up on your own server or you can have us host your site for free.</p>
+
+<p>It is written in JavaScript, PHP and mySQL.</p>
 
 <h2>
 <a id="demo" class="anchor" href="#demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo</h2>
 
-<p>You can see a working version at <a href="http://beta.silverhoneymedia.com">http://beta.silverhoneymedia.com</a>. </p>
+<p>You can see a working version at <a href="http://blastpad.silverhoneymedia.com">http://blastpad.silverhoneymedia.com</a>. </p>
 
 <h2>
 <a id="prerequisites" class="anchor" href="#prerequisites" aria-hidden="true"><span class="octicon octicon-link"></span></a>Prerequisites</h2>
@@ -120,7 +121,7 @@ $google_analytics_code = "UA-0000000-00";
 <ul>
 <li><a href="mailto:honeysilvas@gmail.com">honeysilvas@gmail.com</a></li>
 <li><a href="http://www.zenanswer.com">http://www.zenanswer.com</a></li>
-<li><a href="https://github.com/honeysilvas" class="user-mention">@honeysilvas</a></li>
+<li>@theblastpad</li>
 <li><a href="https://github.com/honeysilvas">https://github.com/honeysilvas</a></li>
 </ul>
 
