--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ $google_analytics_code = "UA-0000000-00";
 
 <p>We also welcome contributors of all levels. </p>
 
-<p>Fork from GitHub at <a href="https://github.com/blastpad/BlastPad">https://github.com/blastpad/BlastPad</a>, create a pull request or chat with us at <a href="https://gitter.im/honeysilvas/BlastPad?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/honeysilvas/BlastPad"></a></p>
+<p>Fork from GitHub at <a href="https://github.com/blastpad/BlastPad">https://github.com/blastpad/BlastPad</a>, create a pull request or chat with us at <a href="https://gitter.im/blastpad/BlastPad?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/blastpad/BlastPad"></a></p>
 
 <p>You can also email me for more information.</p>
 
@@ -232,8 +232,6 @@ $google_analytics_code = "UA-0000000-00";
 
 <p>For help with using BlastPad, you can start a new thread at <a href="http://zenanswer.com">http://zenanswer.com</a>.  </p>
 
-<p>Or you can chat with us live at <a href="https://gitter.im/honeysilvas/BlastPad?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/honeysilvas/BlastPad"></a></p>
-
 <h1>
 <a id="contact-information" class="anchor" href="#contact-information" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact Information</h1>
 
@@ -247,7 +245,7 @@ $google_analytics_code = "UA-0000000-00";
 </li>
 <li>@theblastpad</li>
 <li>GitHub: <a href="https://github.com/blastpad/BlastPad">https://github.com/blastpad/BlastPad</a>
-<a href="https://gitter.im/honeysilvas/BlastPad?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/honeysilvas/BlastPad"></a>
+<a href="https://gitter.im/blastpad/BlastPad?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/blastpad/BlastPad"></a>
 </li>
 </ul>
 
